src/snapshots/afrotd__parser__tests__interpretation_10.2.5_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 2
text: "Team B begeht ein persönliches Foul während eines Downs, in\ndem Team A einen Touchdown erzielt und danach foult Team A nach\ndem Touchdown und vor der Freigabe des Balles beim Try."
ruling: "Der Touchdown gilt. Team A hat die Wahl, die Strafe für Team B’s Foul\nbeim Try, dem anschließenden Kickoff oder vom Succeeding Spot in\nExtraperioden durchführen zu lassen. Team B hat dann auch die Wahl,\ndie Strafe für Team A’s Foul beim Try, dem anschließenden Kickoff oder\nvom Succeeding Spot in Extraperioden durchführen zu lassen. Die Distanz der Meterstrafen für Live und Dead Ball Fouls können sich ausgleichen (Regel 10.2.5)."
