src/snapshots/afrotd__parser__tests__interpretation_10.2.5_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 3
text: "Team B begeht ein Halten während Team A’s Touchdown-Lauf.\nTeam A foult nach der Erzielung des Touchdowns."
ruling: "Der Touchdown gilt. Die Strafe für Team B’s Halten wird durch die Regel abgelehnt. Team B hat die Wahl, die Strafe für Team A’s Foul beim Try,\ndem anschließenden Kickoff oder vom Succeeding Spot in Extraperioden durchführen zu lassen (Regel 10.2.5.a.2 und 10.2.5.c)."
