src/snapshots/afrotd__parser__tests__interpretation_10.2.5_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 5
index: 5
text: Team B rought den Passer während eines Touchdown-PassSpieles.
ruling: "Der Touchdown gilt. Team A hat die Option, die\nStrafe beim Try, dem anschließenden Kickoff oder vom Succeeding Spot\nin Extraperioden durchführen zu lassen."
